# sql-query-application

./: .gitignore  README.md  dev-setup.sh  docker-compose.yml
answer-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml  schemas.py  service.py
answer-service/tests/: test_endpoints.py  test_pure_functions.py
db-service/: .dockerignore  Dockerfile  README.md  alembic.ini  config.py  database.py  init_db.py  main.py  models.py  pyproject.toml  schemas.py
db-service/alembic/: env.py
db-service/alembic/versions/: 0001_create_sales_table.py  0002_alter_date_column.py  0003_alter_hour_column.py
db-service/tests/: conftest.py  test_endpoints.py  test_pure_logic.py
frontend-react/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx
frontend-react/src/components/: ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx  ResultsTable.jsx  SQLBlock.jsx
frontend-react/src/test/: ChatInput.test.jsx  MessageBubble.test.jsx  SQLBlock.test.jsx
model-service/: .dockerignore  Dockerfile  README.md  config.py  few_shots.yaml  main.py  pyproject.toml  router.py  service.py
model-service/tests/: conftest.py  test_endpoints.py  test_pure_functions.py
