[tool.poetry]
name = "db-service"
version = "0.1.0"
description = "FastAPI service to query PostgreSQL"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.4.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
